--- a/star_start.html
+++ b/star_start.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wale</title>
     <link rel="stylesheet" href="css/start_star.css">
-    <script src="src/star_redirect.js"></script>
+    <script src="js/star_redirect.js"></script>
 </head>
 <body>
     <div class="skybox">
