--- a/index.html
+++ b/index.html
@@ -33,6 +33,6 @@
         en esta, puedes encontrar regalos y detallitos que considero lindo darte ^^
     </text>
     </div>
-    <script src="src/store.js"></script>
+    <script src="js/store.js"></script>
 </body>
 </html>
