--- a/star.html
+++ b/star.html
@@ -20,7 +20,7 @@
     <div class="sun-container">
         <div class="sun"></div>
     </div>
-    <script src="js/star.js"></script>
+    <script src="star.js"></script>
 
 </body>
 </html>
